--- a/sprint-2/project-frontend/src/App.css
+++ b/sprint-2/project-frontend/src/App.css
@@ -1,12 +1,35 @@
-/* Base Styles */
+@media only screen and (min-width: 961px) {
+  /* Base Styles */
 body, html {
     display: flexbox;
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #fff;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    background-color: white;
     color: #000;
   }
+
+  body.light {
+    background-color: #DBECF4;
+    color: #194569 ;
+  }
+  
+  body.dark {
+    background-color: #5F84A2;
+    color: #194569 ;
+  }
+  
+  .app.light {
+    background-color:#DBECF4;
+    color: #194569;
+  }
+  
+  .app.dark {
+    background-color: #5F84A2;
+    color: #194569 ;
+  }
+  
+  
   
   /* Container */
   .container {
@@ -18,65 +41,41 @@ body, html {
   
   /* Header */
   header {
-    background-color: #f8f8f8;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
+
   header .logo {
     font-size: 24px;
     font-weight: bold;
   }
   
-  header nav ul {
+  
+  header .icon-list {
     list-style: none;
     display: flex;
     gap: 15px;
   }
   
-  header nav ul li a {
-    text-decoration: none;
-    color: #333;
-  }
-  
+
   /* Hero Section */
   .hero {
-    background-color: #333;
-    color: #fff;
-    padding: 50px 20px;
     text-align: center;
   }
   
-  .hero h1 {
+  .sickbeat-phrase {
     font-size: 48px;
     margin-bottom: 20px;
   }
-  
-  /* Main Content */
-  main {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
+
+ /* Footer */
+ footer {
+  text-align: center;
+  padding: 20px;
+  justify-content: center;
+  display: flex;
   }
-  
-  .main-content {
-    width: 70%;
-  }
-  
-  .sidebar {
-    width: 25%;
-    background-color: #f0f0f0;
-    padding: 20px;
-  }
-  
-  /* Footer */
-  footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-top: 40px;
-  }
-  
+}
