--- a/sprint-2/project-frontend/src/components/BrowseByGenre.css
+++ b/sprint-2/project-frontend/src/components/BrowseByGenre.css
@@ -1,9 +1,47 @@
 .genres {
     padding: 20px;
+}
+
+.genre-title {
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.genre-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+    justify-content: center;
+}
+
+.genre-cards.dark {
+    color: #194569;
+}
+
+.genre-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.genre-card:hover {
+    background-color: #e0e0e0;
+}
+
+
+/* css for real API
+/* .genres {
+    padding: 20px;
     background-color: #f0f0f0;
 }
 
-.genres h2 {
+.genre-section-title {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -14,3 +52,18 @@
     gap: 10px;
     justify-content: center;
 }
+
+.genre-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+.genre-card:hover {
+    transform: scale(1.05);
+}
+ */
