--- a/sprint-2/project-frontend/src/components/Footer.css
+++ b/sprint-2/project-frontend/src/components/Footer.css
@@ -1,18 +1,91 @@
+/* Light theme */
+.sickbeat-footer.light {
+    background-color: #5F84A2;
+    color: #194569;
+}
+
+.sickbeat-footer.light .social-section li a,
+.sickbeat-footer.light .footer-content li a {
+    color: #194569;
+}
+
+/* Dark theme */
+.sickbeat-footer.dark {
+    background-color: #194569;
+    color: #081f5c;
+}
+
+.sickbeat-footer.dark .social-section li a,
+.sickbeat-footer.dark .footer-content li a {
+    color: #081f5c;
+}
+
+/* General footer styles */
 .footer {
     padding: 20px;
     background-color: #121212;
     color: #fff;
     text-align: center;
+    display: flex;
 }
 
 .footer-content ul {
     list-style: none;
     display: flex;
-    gap: 20px;
-    justify-content: center;
+    gap: 150px;
+    padding-right: 10rem;
 }
 
-.footer-content ul li a {
-    color: #fff;
+.footer-content li a {
     text-decoration: none;
+    padding-top: 4rem;
+}
+
+.footer-nav > li {
+    list-style: none;
+    margin: 0;
+    display: flex;
+    align-items: flex-start;
+    margin: 0 20px;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.company-items,
+.help-items {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 4rem;
+    padding-top: 1rem;
+}
+
+.nav-text {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.rights {
+    white-space: nowrap;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 14px;
+    display: flex;
+    padding-top: 3rem;
+    padding-left: 5rem;
+    font-size: medium;
+}
+
+.social-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 150px;
+    margin: 0 auto;
+}
+
+.social-section li a {
+    text-decoration: none;
+    font-size: 18px;
+    margin-right: 15px;
 }
