--- a/sprint-2/project-frontend/src/components/Header.css
+++ b/sprint-2/project-frontend/src/components/Header.css
@@ -1,58 +1,77 @@
-/* Basic reset and styling */
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .logo {
-    font-size: 24px;
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-  
-  .search-container {
-    flex: 1;
-    display: flexbox;
-    justify-content: left;
-    margin: 0 20px; /* Adjust spacing as needed */
-  }
-  
-  .search-container input {
-    width: 100%;
-    max-width: 900px; /* Adjust width as needed */
-    padding: 8px;
-    border: none;
-    border-radius: 4px; 
-  }
-
-  .nav ul {
-    list-style: none;
-    display: flex;
-    padding-right: 5rem;
-    gap: 20px;
-    align-items: center;
+.sickbeat-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: black;
 }
 
-.nav ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
+.sickbeat-header.light {
+  background-color: #DBECF4;
+  color: #194569 ;
+}
+
+.sickbeat-header.dark {
+  background-color: #91AEC4; 
+  color: #194569;
 }
 
 
-.nav ul li a svg {
-    width: 24px;
-    height: 24px;
-    cursor: pointer;
+.logo {
+  font-size: 24px;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  color: whitesmoke;
 }
+
+.search-container {
+  flex: 1;
+  display: flexbox;
+  justify-content: left;
+  margin: 0 20px;
+}
+
+.search-container input {
+  width: 100%;
+  min-width: 100px;
+  max-width: 900px; /* Adjust width as needed */
+  padding: 8px;
+  border: none;
+  border-radius: 4px; 
+}
+
+.icon-list  {
+  list-style: none;
+  display: flex;
+  padding-right: 5rem;
+  gap: 20px;
+  align-items: center;
+}
+
+.icon-list li a {
+  text-decoration: none;
+  color: whitesmoke;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 50px; /* Adjust this value to position it under the "three bar icon" */
+  right: 20px; /* Adjust the alignment */
+  background-color: #282c34;
+  padding: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  border-radius: 10px;
+}
+
+
+.my-profile-button {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
