--- a/sprint-2/project-frontend/src/components/Hero.css
+++ b/sprint-2/project-frontend/src/components/Hero.css
@@ -1,44 +1,62 @@
 .hero {
-    background-image: url('/path-to-your-background-image.jpg');
     background-size: cover;
     background-position: center;
-    padding: 50px 20px;
     color: #fff;
     text-align: center;
 }
 
-.hero-content h2 {
-    font-size: 36px;
-    margin-bottom: 20px;
+.hero-background {
+    position: relative;
+    background-image: url('../images/theweeknd.jpg');
+    background-size: cover; /* Ensures the image fills the container */
+    background-position: center;
+    height: 80vh; /* Adjust this value to crop the height */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Ensures any content outside the section is hidden */
 }
 
-.statistics {
+.hero-background::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2; /* Ensures the content is above the overlay */
+    color: #fff;
+    text-align: center;
+}
+
+
+.sickbeat-phrase {
+    font-size: 36px;
+    margin-bottom: 20px;
+    color: whitesmoke;
+}
+
+.sickbeat-text {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-bottom: 20px;
+    font-size: 20px;
+    color: whitesmoke;
 }
 
-.statistics span {
-    font-size: 24px;
-}
-
-.artist-slider {
-    display: flex;
-    justify-content: center;
+.browse-button {
+    text-decoration: none;
+    color: #000;
+    font-size: 18px;
+    display: flexbox;
     align-items: center;
-}
-
-.artist-slider .prev, .artist-slider .next {
-    font-size: 30px;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-}
-
-.artists {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
+    color: whitesmoke;
 }
