--- a/sprint-2/project-frontend/src/components/Login.css
+++ b/sprint-2/project-frontend/src/components/Login.css
@@ -1,26 +1,26 @@
-/* login.css */
+/* Login.css */
 
 .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
-  
-  .login-box {
+}
+
+.login-box {
     border: 1px solid #E5E5E5;
     padding: 40px;
     border-radius: 10px;
     max-width: 400px;
     width: 100%;
-  }
-  
-  .login-title {
+}
+
+.login-title {
     text-align: center;
     margin-bottom: 30px;
-  }
-  
-  .input-field {
+}
+
+.input-field {
     width: 100%;
     padding: 15px;
     font-size: 16px;
@@ -29,9 +29,9 @@
     background-color: #F5F5F5;
     margin-bottom: 20px;
     color: black;
-  }
-  
-  .submit-button {
+}
+
+.submit-button {
     width: 100%;
     padding: 15px;
     font-size: 16px;
@@ -40,19 +40,19 @@
     border-radius: 8px;
     border: none;
     cursor: pointer;
-  }
-  
-  .link-container {
+}
+
+.link-container {
     text-align: center;
     margin-top: 20px;
-  }
-  
-  .link {
+}
+
+.link {
     color: #635BFF;
     text-decoration: none;
-  }
-  
-  .link:hover {
+}
+
+.link:hover {
     text-decoration: underline;
-  }
+}
   
