--- a/sprint-2/project-frontend/src/components/Hero.css
+++ b/sprint-2/project-frontend/src/components/Hero.css
@@ -1,13 +1,13 @@
 .hero {
+    text-align: center;
+    background-color: var(--background-color);
+    color: var(--text-color);
     background-size: cover;
     background-position: center;
-    color: #fff;
-    text-align: center;
 }
 
 .hero-background {
     position: relative;
-    background-image: url('../images/theweeknd.jpg');
     background-size: cover; /* Ensures the image fills the container */
     background-position: center;
     height: 80vh; /* Adjust this value to crop the height */
@@ -18,6 +18,14 @@
     overflow: hidden; /* Ensures any content outside the section is hidden */
 }
 
+body.dark .hero-background {
+    background-image: url('../images/hero-background-dark.jpg');
+}
+
+body.light .hero-background {
+    background-image: url('../images/hero-background-light.jpg');
+}
+
 .hero-background::before {
     content: '';
     position: absolute;
@@ -25,22 +33,28 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
     z-index: 1;
+}
+
+body.dark .hero-background::before {
+    background-color: rgba(0, 0, 0, 0.7); /* Dark overlay */
+}
+
+body.light .hero-background::before {
+    background-color: rgba(255, 255, 255, 0.5); /* Light overlay */
 }
 
 .hero-content {
     position: relative;
     z-index: 2; /* Ensures the content is above the overlay */
-    color: #fff;
+    color: var(--text-color);
     text-align: center;
 }
-
 
 .sickbeat-phrase {
     font-size: 36px;
     margin-bottom: 20px;
-    color: whitesmoke;
+    color: var(--text-color);
 }
 
 .sickbeat-text {
@@ -49,14 +63,12 @@
     gap: 20px;
     margin-bottom: 20px;
     font-size: 20px;
-    color: whitesmoke;
+    color: var(--text-color);
 }
 
 .browse-button {
     text-decoration: none;
-    color: #000;
     font-size: 18px;
-    display: flexbox;
     align-items: center;
-    color: whitesmoke;
+    color: var(--text-color);
 }
