--- a/sprint-3/frontend/src/App.css
+++ b/sprint-3/frontend/src/App.css
@@ -1,6 +1,6 @@
 :root {
-    --background-color: #f0f0f0;
-    --text-color: #333;
+    --primary-color: #f0f0f0;
+    --secondary-color: #333;
 }
 
 /* Base Styles */
@@ -8,29 +8,29 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Arial Narrow Bold', sans-serif;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     min-width: 820px;
 }
 
 body.light {
-    --background-color: #f0f0f0;
-    --text-color: #333;
+    --primary-color: #f0f0f0;
+    --secondary-color: #333;
 }
 
 body.dark {
-    --background-color: #121212;
-    --text-color: #e0e0e0;
+    --primary-color: #121212;
+    --secondary-color: #e0e0e0;
 }
 
 .app.light {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .app.dark {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 /* Container */
@@ -39,15 +39,15 @@ body.dark {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 /* Hero Section */
 .hero {
     text-align: center;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .sickbeat-phrase {
