--- a/sprint-3/frontend/src/components/Footer.css
+++ b/sprint-3/frontend/src/components/Footer.css
@@ -1,30 +1,30 @@
 /* Light theme */
 .sickbeat-footer.light {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .sickbeat-footer.light .social-section li a,
 .sickbeat-footer.light .footer-content li a {
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
 
 /* Dark theme */
 .sickbeat-footer.dark {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .sickbeat-footer.dark .social-section li a,
 .sickbeat-footer.dark .footer-content li a {
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
 
 /* General footer styles */
 .footer {
     padding: 20px;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -46,7 +46,7 @@
 
 .footer-content li a {
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
 
 .footer-nav {
