--- a/sprint-3/frontend/src/components/Header.css
+++ b/sprint-3/frontend/src/components/Header.css
@@ -3,18 +3,18 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .sickbeat-header.light {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .sickbeat-header.dark {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .logo {
@@ -23,11 +23,11 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-left: 3rem;
     padding-right: 3rem;
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
 
 .logo:hover, .logo:focus, .logo:active {
-    color: var(--text-color);
+    color: var(--secondary-color);
     text-decoration: none;
 }
 
@@ -70,7 +70,7 @@
 
 .icon-list li a {
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--secondary-color);
     font-size: 18px;
     display: flex;
     align-items: center;
@@ -82,7 +82,7 @@
     position: absolute;
     top: 60px; /* Adjust this value to position it under the "three bar icon" */
     right: 35px; /* Adjust the alignment */
-    background-color: var(--background-color);
+    background-color: var(--primary-color);
     padding: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 10;
