--- a/sprint-3/frontend/src/components/Hero.css
+++ b/sprint-3/frontend/src/components/Hero.css
@@ -1,7 +1,7 @@
 .hero {
     text-align: center;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     background-size: cover;
     background-position: center;
 }
@@ -47,14 +47,14 @@ body.light .hero-background::before {
 .hero-content {
     position: relative;
     z-index: 2; /* Ensures the content is above the overlay */
-    color: var(--text-color);
+    color: var(--secondary-color);
     text-align: center;
 }
 
 .sickbeat-phrase {
     font-size: 36px;
     margin-bottom: 20px;
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
 
 .sickbeat-text {
@@ -63,12 +63,12 @@ body.light .hero-background::before {
     gap: 20px;
     margin-bottom: 20px;
     font-size: 20px;
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
 
 .browse-button {
     text-decoration: none;
     font-size: 18px;
     align-items: center;
-    color: var(--text-color);
+    color: var(--secondary-color);
 }
