--- a/sprint-3/frontend/src/index.css
+++ b/sprint-3/frontend/src/index.css
@@ -1,3 +1,5 @@
+/* Delete most of this */
+
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
