--- a/sprint-3/frontend/src/components/Hero.module.css
+++ b/sprint-3/frontend/src/components/Hero.module.css
@@ -6,27 +6,19 @@
     background-position: center;
 }
 
-.hero-background {
+.heroBackground {
     position: relative;
-    background-size: cover; /* Ensures the image fills the container */
+    background-size: cover; 
     background-position: center;
-    height: 80vh; /* Adjust this value to crop the height */
+    height: 80vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden; /* Ensures any content outside the section is hidden */
+    overflow: hidden; 
 }
 
-body.dark .hero-background {
-    background-image: url('../images/hero-background-dark.jpg');
-}
-
-body.light .hero-background {
-    background-image: url('../images/hero-background-light.jpg');
-}
-
-.hero-background::before {
+.heroBackground::before {
     content: '';
     position: absolute;
     top: 0;
@@ -34,30 +26,27 @@ body.light .hero-background {
     width: 100%;
     height: 100%;
     z-index: 1;
+    background-color: rgba(0, 0, 0, 0.6); 
 }
 
-body.dark .hero-background::before {
-    background-color: rgba(0, 0, 0, 0.7); /* Dark overlay */
+body.light .heroBackground::before {
+    background-color: rgba(255, 255, 255, 0.3); 
 }
 
-body.light .hero-background::before {
-    background-color: rgba(255, 255, 255, 0.5); /* Light overlay */
-}
-
-.hero-content {
+.heroContent {
     position: relative;
-    z-index: 2; /* Ensures the content is above the overlay */
+    z-index: 2; 
     color: var(--secondary-color);
     text-align: center;
 }
 
-.sickbeat-phrase {
+.sickbeatPhrase {
     font-size: 36px;
     margin-bottom: 20px;
     color: var(--secondary-color);
 }
 
-.sickbeat-text {
+.sickbeatText {
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -66,7 +55,7 @@ body.light .hero-background::before {
     color: var(--secondary-color);
 }
 
-.browse-button {
+.browseButton {
     text-decoration: none;
     font-size: 18px;
     align-items: center;
