--- a/sprint-3/frontend/src/pages/Register.module.css
+++ b/sprint-3/frontend/src/pages/Register.module.css
@@ -1,4 +1,4 @@
-.login-container {
+.registerContainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +7,7 @@
     color: var(--secondary-color);
 }
 
-.login-box {
+.registerBox {
     border: 1px solid var(--secondary-color);
     padding: 40px;
     border-radius: 10px;
@@ -16,25 +16,30 @@
     background-color: var(--primary-color);
 }
 
-.login-title {
+.registerTitle {
     text-align: center;
     margin-bottom: 30px;
+    font-size: 24px;
     color: var(--secondary-color);
 }
 
-.input-field {
+.inputGroup {
+    margin-bottom: 10px;
+}
+
+.inputField {
     width: 100%;
     padding: 15px;
     font-size: 16px;
     border-radius: 8px;
     background-color: var(--secondary-color);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: var(--primary-color);
     box-sizing: border-box;
     border: 1px solid #ccc;
 }
 
-.submit-button {
+.submitButton {
     width: 100%;
     padding: 15px;
     font-size: 16px;
@@ -46,7 +51,7 @@
     box-sizing: border-box;
 }
 
-.link-container {
+.linkContainer {
     text-align: center;
     margin-top: 20px;
 }
