--- a/sprint-3/frontend/src/App.css
+++ b/sprint-3/frontend/src/App.css
@@ -1,18 +1,25 @@
+/*App.css*/
 :root {
     --light-primary-color: #f0f0f0;
     --light-secondary-color: #333;
     --dark-primary-color: #121212;
     --dark-secondary-color: #e0e0e0;
+    --light-footer-background: #d9dcde; /* Light theme footer background: soft blue */
+    --light-footer-text: #2e4b5f;       /* Light theme footer text: dark teal */
+    --dark-footer-background: #1e1d1d;  /* Dark theme footer background: navy blue */
+    --dark-footer-text: #a0b3c5;      
 }
 
 body.light {
     --primary-color: var(--light-primary-color);
     --secondary-color: var(--light-secondary-color);
+    --tertiary-color: var(--light-footer-background)
 }
 
 body.dark {
     --primary-color: var(--dark-primary-color);
     --secondary-color: var(--dark-secondary-color);
+    --tertiary-color: var(--dark-footer-background)
 }
 
 /* Base Styles */
