refactor some components to pages and remove redundant files

--- a/sprint-3/frontend/src/pages/AccountPage.module.css
+++ b/sprint-3/frontend/src/pages/AccountPage.module.css
@@ -65,7 +65,7 @@
    color: #333;
    transition: background-color 0.3s ease;
    margin-right: 10px;
-   width: 40%; /* Make the button more centered and responsive */
+   width: 20%; /* Make the button more centered and responsive */
 }
 
 
@@ -81,6 +81,23 @@ button:hover {
 
 .deleteAccount:hover {
    background-color: var(--danger-hover);
+}
+
+button {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+}
+
+button:focus,
+button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
 }
 
 
