--- a/sprint-3/frontend/src/pages/Account/AccountPage.module.css
+++ b/sprint-3/frontend/src/pages/Account/AccountPage.module.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     padding: 20px;
     background-color: var(--bg-color);
-    color: var(--text-color);
+    color: var(--contrast-primary-color);
     font-family: 'Arial', sans-serif;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -24,7 +24,7 @@
 
 .pictureSection, .infoSection, .passwordSection, .saveCancelSection, .deleteSection:h2 {
     margin-bottom: 15px;
-    color: var(--primary-color);
+    color: var(--base-primary-color);
     font-size: 1.5rem;
     text-align: center;
 }
@@ -61,7 +61,7 @@
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
-    background-color: var(--primary-color);
+    background-color: var(--base-primary-color);
     color: #333;
     transition: background-color 0.3s ease;
     margin-right: 10px;
@@ -111,9 +111,9 @@ button:hover {
 /* Light theme (default) */
 :root {
     --bg-color: #f4f4f4;
-    --text-color: #333;
-    --primary-color: #8e8e8e;
-    --secondary-color: #6b6767;
+    --contrast-primary-color: #333;
+    --base-primary-color: #8e8e8e;
+    --contrast-primary-color: #6b6767;
     --primary-hover: #555;
     --danger-color: #dc3545;
     --danger-hover: #c82333;
