--- a/sprint-3/frontend/src/pages/Playlist/PlaylistPage.module.css
+++ b/sprint-3/frontend/src/pages/Playlist/PlaylistPage.module.css
@@ -1,7 +1,7 @@
 .container {
     padding: 20px;
-    background-color: var(--primary-color); /* Uses the theme's background color */
-    color: var(--secondary-color); /* Uses the theme's text color */
+    background-color: var(--base-primary-color); /* Uses the theme's background color */
+    color: var(--contrast-primary-color); /* Uses the theme's text color */
     font-family: Arial, sans-serif;
     height: 100vh;
 }
@@ -30,23 +30,23 @@
     font-size: 12px;
     text-transform: uppercase;
     margin-bottom: 5px;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
 }
 
 .title {
     font-size: 48px;
     margin: 0;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
 }
 
 .description {
     font-size: 14px;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
 }
 
 .details {
     font-size: 14px;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
 }
 
 /* Playlist Controls */
@@ -58,7 +58,7 @@
 
 .playButton {
     background-color: #686a6a;
-    color: var(--primary-color); /* Light or dark text color based on mode */
+    color: var(--base-primary-color); /* Light or dark text color based on mode */
     padding: 10px 20px;
     border-radius: 30px;
     border: none;
@@ -79,23 +79,23 @@
 .tableHeader {
     text-align: left;
     padding: 10px;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
     font-size: 14px;
     text-transform: uppercase;
 }
 
 .tableCell {
     padding: 10px;
-    border-bottom: 1px solid var(--secondary-color); /* Updated to use the theme color */
+    border-bottom: 1px solid var(--contrast-primary-color); /* Updated to use the theme color */
 }
 
 .trackTitle {
     font-size: 16px;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
 }
 
 .trackArtist {
     font-size: 12px;
-    color: var(--secondary-color); /* Updated to use the theme color */
+    color: var(--contrast-primary-color); /* Updated to use the theme color */
 }
   
