--- a/sprint-3/frontend/src/components/Card/Card.module.css
+++ b/sprint-3/frontend/src/components/Card/Card.module.css
@@ -1,9 +1,17 @@
 .card {
-    background-color: var(--light-base-primary-color);
-    color: var(--dark-base-primary-color);
+    background-color: var(--base-secondary-color);
+    color: var(--contrast-primary-color);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
+    transition: transform 0.3s ease;
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .image {
@@ -11,8 +19,34 @@
     border-radius: 10px;
 }
 
-.title {
+.title,
+.content{
     text-align: center;
     font-size: 16px;
-    margin-top: 10px;
+    padding: 0 8px 0 8px;
+    margin-bottom: 0;
+}
+
+.title {
+    font-size: 16px;
+    margin-top: 15px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.content {
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.artistLink {
+    color: var(--contrast-primary-color);
+    cursor: pointer;
+}
+
+.artistLink:hover {
+    text-decoration: underline;
 }
