--- a/sprint-3/frontend/src/components/Card/Card.module.css
+++ b/sprint-3/frontend/src/components/Card/Card.module.css
@@ -2,7 +2,7 @@
     background-color: var(--base-secondary-color);
     color: var(--contrast-primary-color);
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
     width: 100%;
     transition: transform 0.3s ease;
 }
